--- a/index.html
+++ b/index.html
@@ -9,31 +9,28 @@
 </head>
 <body>
     <header class="header">
-        <nav class="navbar navbar-expand-md navbar-light d-flex justify-content-center">
-          <div class="contenedorLogo">
-            <a href="#"><img src="./img/perretelogo.png" alt="Logo" class="logo"></a>
-          </div>
-      
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-      
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav justify-content-center">
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./pages/menu.html">Adopta</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="./pages/galeria.html">Conócenos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="./pages/cafe.html">Donar</a>
-              </li>
-            </ul>
-            <!-- Elementos de Registro y Login -->
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+          <div class="container-fluid">
+            <a class="navbar-brand mx-auto" href="#"><img src="./img/perretelogo.png" alt="Logo" class="logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Adopta</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Conócenos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Donar</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </nav>
       </header>
