--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                   <a class="nav-link" href="#">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Adopta</a>
+                  <a class="nav-link" href="#">Adoptame loco</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Conócenos</a>
