--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     <main class="index-main">
         <div class="container">
             <div class="left">
-              <h1>Título</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <h1>Encuentra a tu Compañero Perfecto</h1>
+              <p>Brindar un hogar a animales callejeros y darles una segunda oportunidad. Adopta hoy y sé parte de la esperanza que cambia vidas.</p>
             </div>
             <div class="right">
-              <img src="./img/imgindex/perrogato.png" alt="Descripción de la imagen">
+              <img src="./img/imgindex/patas.png" alt="Descripción de la imagen">
             </div>
           </div>
 
